# nine_lives

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  Trunk.toml  VISUAL_IMPROVEMENTS.md  WARP.md  index 2.html  index.html
.cargo/: config.toml
.github/workflows/: ci.yml  deploy.yml  gh-pages.yml
design/: api_analysis.md  ux_features.md
docs/: GENERATION_IMPROVEMENTS.md  README.md  ROADMAP.md  dup_audit.md
docs/architecture/: mvc_overview.md  ux_specification.md
docs/changelog/: generation_fixes.md  roadmap.md  visual_improvements.md
docs/development/: guide.md  testing.md
examples/: simple.rs
nine_lives_controller/: Cargo.toml  index 2.html  index.html
nine_lives_controller/src/: lib.rs  main 2.rs
nine_lives_core/: Cargo 2.toml  Cargo.toml
nine_lives_core/src/: lib.rs
nine_lives_logic/: Cargo.toml
nine_lives_logic/src/: lib.rs
nine_lives_ui/: Cargo 2.toml  Cargo.toml
nine_lives_ui/src/: kitties.rs  lib.rs
nine_lives_ui/tests/: preset_highlight.rs
scripts/: build_web.sh  serve_web.sh
src/: main.rs
tests/: expert_generation.rs  smoke.rs
web/: index 2.html  index.html
