[package]
name = "nine_lives_core"
version = "0.1.0"
edition = "2024"

[features]
default = []
web = []

[dependencies]
# Minimal Bevy for Resource derive
bevy = { version = "0.16.1", default-features = false }
# Random number generation for puzzle creation
rand = "0.8"
# Serialization for persistence
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Directory utilities for save files
dirs = "5.0"
